app/qaDepartment/styles.module.css
html {
    height: 100%;
    margin: 0;
}

@font-face {
    font-family: 'Darker Grotesque';
    src: url('../fonts/DarkerGrotesque-Black.ttf') format('truetype'); /* Corrected format */
    font-weight: 800; /* Assuming ExtraBold is around 800 */
    font-style: normal;
}

body {
    background-color: #e3e3e3;
    background-image: 
        linear-gradient(to right, #bbbbbb39 1px, transparent 1px),
        linear-gradient(to bottom, #bbbbbb39 1px, transparent 1px);
    background-size: 50px 50px;
}

.header {
    display: flex;
    align-items: center;
    background-color: #1F3C53;
    justify-content: space-between;
    height: 66px;
    padding-left: 2%;
    padding-right: 2%;
    margin-bottom: 1%;
}

.home {
    display: flex;
    align-items: center;
    font-family: "Darker Grotesque";
    font-weight: 800;
    font-size: 42px;
}

.cloud-icon {
    margin-right: 12px;
    height: 35px;
    width: 35px;
}

.department {
    display: flex;
    justify-content: center;
    font-family: "Darker Grotesque";
    font-weight: 800;
    font-size: 40px;
    color: black;
    margin-bottom: 3%;
}

.profile {
    display: flex;
    justify-content: right;
    height: 25px;
    width: 25px;
}

.upload {
    display: flex;
    justify-content: center;
    font-family: "Darker Grotesque";
    color: black;
    margin-bottom: 3%;
}

.files {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;
}

.file-section {
    flex: 1;
}

.file-title {
    font-family: "Darker Grotesque";
    font-size: 35px;
    font-weight: bold;
    margin-bottom: 10px;
    color: #1F3C53;
    text-align: center;
}

.file-items {
    display: flex; /* Use flexbox for layout */
    flex-direction: column; /* Stack files vertically */
}

.file-item {
    display: flex;
    align-items: center;
    background-color: #EBEBEB;
    border: 2px solid #ffffff;
    font-family: "Darker Grotesque";
    font-size: 15px;
    color: #000000;
    height: 35px;
    padding-left: 2%;
}

.file-box {
    padding: 10px;
    overflow-y: auto;
}

.file-section {
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

